# Highest_4Adjacents_Product

./: CMakeLists.txt  README.md
src/: highest_product.cpp  highest_product.h  main.cpp
test/: highest_product_test.cpp
